# marsopt

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py 19-44-23-857.py
.github/workflows/: build_wheels.yml
bbox_test/: bbox.py  hyper_parameter 2.py  hyper_parameter.py  plot_bbox.py  test.py  time.py  visualize.py  visualize_parameter.py
docs/: requirements.txt
docs/source/: algorithm.md  api.rst  conf.py  getting_started.md  index.rst  performance.md
docs/source/_static/algorithm/: figure.py
examples/: lgbm.py  pytorch_simple.py
marsopt/: __init__.py  logger.py  parameters.py  solver.py  variable.py
results/cma/: Ackley_11.csv  Ackley_3.csv  Adjiman_2.csv  Alpine02_2.csv  CarromTable_2.csv  Csendes_2.csv  DeflectedCorrugatedSpring_4.csv  DeflectedCorrugatedSpring_7.csv  Easom_2.csv  Easom_4.csv  Easom_5.csv  Hartmann3_3.csv  Hartmann6_6.csv  HelicalValley_3.csv  LennardJones6_6.csv  McCourt01_7.csv  McCourt03_9.csv  McCourt06_5.csv  McCourt07_6.csv  McCourt08_4.csv  McCourt09_3.csv  McCourt10_8.csv  McCourt11_8.csv  McCourt12_7.csv  McCourt13_3.csv  McCourt14_3.csv  McCourt16_4.csv  McCourt17_7.csv  McCourt18_8.csv  McCourt19_2.csv  McCourt20_2.csv  McCourt23_6.csv  McCourt26_3.csv  McCourt28_4.csv  Michalewicz_4.csv  Michalewicz_8.csv  Mishra06_2.csv  Ned01_2.csv  OddSquare_2.csv  Parsopoulos_2.csv  (+12 more)
results/mars/: Ackley_11.csv  Ackley_3.csv  Adjiman_2.csv  Alpine02_2.csv  CarromTable_2.csv  Csendes_2.csv  DeflectedCorrugatedSpring_4.csv  DeflectedCorrugatedSpring_7.csv  Easom_2.csv  Easom_4.csv  Easom_5.csv  Hartmann3_3.csv  Hartmann6_6.csv  HelicalValley_3.csv  LennardJones6_6.csv  McCourt01_7.csv  McCourt03_9.csv  McCourt06_5.csv  McCourt07_6.csv  McCourt08_4.csv  McCourt09_3.csv  McCourt10_8.csv  McCourt11_8.csv  McCourt12_7.csv  McCourt13_3.csv  McCourt14_3.csv  McCourt16_4.csv  McCourt17_7.csv  McCourt18_8.csv  McCourt19_2.csv  McCourt20_2.csv  McCourt23_6.csv  McCourt26_3.csv  McCourt28_4.csv  Michalewicz_4.csv  Michalewicz_8.csv  Mishra06_2.csv  Ned01_2.csv  OddSquare_2.csv  Parsopoulos_2.csv  (+13 more)
results/optuna/: Ackley_11.csv  Ackley_3.csv  Adjiman_2.csv  Alpine02_2.csv  CarromTable_2.csv  Csendes_2.csv  DeflectedCorrugatedSpring_4.csv  DeflectedCorrugatedSpring_7.csv  Easom_2.csv  Easom_4.csv  Easom_5.csv  Hartmann3_3.csv  Hartmann6_6.csv  HelicalValley_3.csv  LennardJones6_6.csv  McCourt01_7.csv  McCourt03_9.csv  McCourt06_5.csv  McCourt07_6.csv  McCourt08_4.csv  McCourt09_3.csv  McCourt10_8.csv  McCourt11_8.csv  McCourt12_7.csv  McCourt13_3.csv  McCourt14_3.csv  McCourt16_4.csv  McCourt17_7.csv  McCourt18_8.csv  McCourt19_2.csv  McCourt20_2.csv  McCourt23_6.csv  McCourt26_3.csv  McCourt28_4.csv  Michalewicz_4.csv  Michalewicz_8.csv  Mishra06_2.csv  Ned01_2.csv  OddSquare_2.csv  Parsopoulos_2.csv  (+12 more)
results/random/: Ackley_11.csv  Ackley_3.csv  Adjiman_2.csv  Alpine02_2.csv  CarromTable_2.csv  Csendes_2.csv  DeflectedCorrugatedSpring_4.csv  DeflectedCorrugatedSpring_7.csv  Easom_2.csv  Easom_4.csv  Easom_5.csv  Hartmann3_3.csv  Hartmann6_6.csv  HelicalValley_3.csv  LennardJones6_6.csv  McCourt01_7.csv  McCourt03_9.csv  McCourt06_5.csv  McCourt07_6.csv  McCourt08_4.csv  McCourt09_3.csv  McCourt10_8.csv  McCourt11_8.csv  McCourt12_7.csv  McCourt13_3.csv  McCourt14_3.csv  McCourt16_4.csv  McCourt17_7.csv  McCourt18_8.csv  McCourt19_2.csv  McCourt20_2.csv  McCourt23_6.csv  McCourt26_3.csv  McCourt28_4.csv  Michalewicz_4.csv  Michalewicz_8.csv  Mishra06_2.csv  Ned01_2.csv  OddSquare_2.csv  Parsopoulos_2.csv  (+11 more)
